--- a/docs/mymacros.tex
+++ b/docs/mymacros.tex
@@ -14,5 +14,12 @@
 \newcommand*{\dd}{\mathop{\diffdchar\!}}
 
 \newcommand{\action}{\mathcal{S}}
+\newcommand{\genkvp}{\mathcal{L}}
 \newcommand{\nbasis}{N_b}
+\newcommand{\weights}{\beta}
+\newcommand{\kvpweights}{\vec{\weights}_\star}
+\newcommand{\lagmult}{\lambda_\star}
+\newcommand{\psitrial}{\widetilde \psi}
+\newcommand{\dU}{\Delta \widetilde U}
 \newcommand{\param}{\boldsymbol{\theta}}
+\newcommand{\umatrix}{\boldsymbol{u}}
